# python-bootcamp

./: .gitignore
week-1/: buildin_data_structures.py  control_flow.py  data_types.py  function.py  input_and_print.py  list_comprehensions.py
week-2/: all_and_any.py  classs.py  decorator.py  enumerate.py  example.txt  exception_handling.py  file_handling.py  generator.py  map_filter_reduce_lambda.py  min_max.py  modules.py  new_name.txt  students.csv
week-3/auth-jwt-fastapi/: README.md  requirements.txt
week-3/auth-jwt-fastapi/app/: main.py
week-3/auth-jwt-fastapi/app/api/: auth.py
week-3/auth-jwt-fastapi/app/core/: config.py  database.py  security.py
week-3/auth-jwt-fastapi/app/models/: user.py
week-3/auth-jwt-fastapi/app/schemas/: user.py
week-3/auth-jwt-fastapi/app/services/: auth_service.py
week-5/: .dockerignore  .env.example  Dockerfile  Readme.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
week-5/app/: main.py
week-5/app/api/: appointment.py  auth.py  doctor.py  health.py
week-5/app/core/: config.py  database.py  dependencies.py  lifespan.py  security.py
week-5/app/enums/: appointment_status.py  user_role.py
week-5/app/models/: appointment.py  availability.py  user.py
week-5/app/repositories/: user_repo.py
week-5/app/schemas/: appointment.py  auth.py  availability.py  doctor.py
week-5/app/services/: appointment.py  auth_service.py  doctor_service.py
week-5/tests/services/: test_doctor_service.py
